--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pytest
+          python -m unittest -v tests.game_test
       - name: Check coverage
         run: |
-          pytest game_test.py --cov=code
+          pytest tests/game_test --cov=code
