--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
           python -m unittest -v tests.game_test
       - name: Check coverage
         run: |
-          coverage run -m code
+          coverage run code
