--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pytest pytest-cov
+          pip install coverage
           python -m pip install pygame
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Lint with flake8
