--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,4 +36,4 @@ jobs:
           python -m unittest -v tests.game_test
       - name: Check coverage
         run: |
-          python coverage.py run -m unittest discover
+          python coverage run -m unittest discover
