--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,4 +33,4 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test and cov
         run: |
-          coverage run --source=./code -m unittest discover ./tests
+          coverage run -v tests.game_test
