--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test and cov
+      - name: Test with pytest
         run: |
-          coverage run -v tests.game_test
+          python -m unittest -v tests.game_test
+      - name: Check coverage
+        run: |
+          coverage run -m unittest
