--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,10 +31,19 @@ jobs:
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Test with pytest
+      - name: Install dependencies
+        run: |
+          cd src
+          python -m pip install --upgrade pip
+          pip install coverage
+          if  [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Run Unit Tests and generate coverage report
         run: |
           cd src
           python -m unittest -v
+          coverage run -m unittest
+          coverage report
+ 
       - name: Check coverage
         run: |
           cd src
