--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,50 +1,49 @@
-name: Run tests
+# GitHub CI build pipeline
+name: Awesome Calculator CI build
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - master
+      - main
   pull_request:
-    branches: [ main ]
-
-
+    branches:
+      - master
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v2
-        with:
-          python-version: "3.8"
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 pytest pytest-cov
-          pip install coverage
-          python -m pip install pygame
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Lint with flake8
-        run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-      - name: Install dependencies
-        run: |
-          cd src
-          python -m pip install --upgrade pip
-          pip install coverage
-          if  [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Run Unit Tests and generate coverage report
-        run: |
-          cd src
-          python -m unittest -v
-          coverage run -m unittest
-          coverage report
- 
-      - name: Check coverage
-        run: |
-          cd src
-          coverage run -m unittest
+    - uses: actions/checkout@v2
+    - name: Set up python 3.8
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: Install dependencies
+      run: |
+        cd src
+        python -m pip install --upgrade pip
+        pip install coverage
+        if  [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Run Unit Tests and generate coverage report
+      run: |
+        cd src
+        python -m unittest -v
+        coverage run -m unittest
+        coverage report
+        coverage html
+    - name: Archive code coverage html report
+      uses: actions/upload-artifact@v2
+      with:
+        name: code-coverage-report
+        path: src/htmlcov
+    - name: Run package creation
+      run: |
+        cd src
+        python -m pip install --user --upgrade build
+        python -m build
+    - name: Archive package
+      uses: actions/upload-artifact@v2
+      with:
+        name: awesome-calculator
+        path: src/dist    
